src/objects/Slack_Integration_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Slack Integration Config custom setting will have global properties which will be used in apex code.</description>
    <fields>
        <fullName>Default_Channel__c</fullName>
        <description>If channel is not specified in apex SlackService.postMessage() method this will be the channel (webhook which will be used).</description>
        <inlineHelpText>If channel is not specified in apex SlackService.postMessage() method this will be the channel (webhook which will be used).</inlineHelpText>
        <label>Default Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting will turn all the integration and it will result in preventing the post to slack channels logic from executing.</description>
        <inlineHelpText>This setting will turn all the integration and it will result in preventing the post to slack channels logic from executing.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_Channel__c</fullName>
        <description>The intended purpose of this channel is the be used in tandem of exception handling and result i logging the slack message into a specific channel.</description>
        <inlineHelpText>The intended purpose of this channel is the be used in tandem of exception handling and result i logging the slack message into a specific channel.</inlineHelpText>
        <label>Exception Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <description>Custom Emoji icon for the Bot.</description>
        <label>Icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slack_Exceptions_Hashtag__c</fullName>
        <description>This will be used in ExceptionUtil class to log exception in slack channel and tag it

Include value with hashtag like so: #my-hash-tag</description>
        <inlineHelpText>This will be used in ExceptionUtil class to log exception in slack channel and tag it

Include value with hashtag like so: #my-hash-tag</inlineHelpText>
        <label>Slack Exceptions Hashtag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Slack Integration Configuration</label>
</CustomObject>